# nano-rspow

./: .gitignore  AUTHORS  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: node-publish.yml  python-publish.yml  web-publish.yml
nano-rspow/: Cargo.toml
nano-rspow-cli/: Cargo.toml
nano-rspow-cli/src/: main.rs
nano-rspow-cli/tests/: cli_tests.rs
nano-rspow-node/: AGENTS.md  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
nano-rspow-node/npm/darwin-arm64/: README.md  package.json
nano-rspow-node/npm/darwin-x64/: README.md  package.json
nano-rspow-node/npm/linux-arm64-gnu/: README.md  package.json
nano-rspow-node/npm/linux-x64-gnu/: README.md  package.json
nano-rspow-node/npm/win32-x64-msvc/: README.md  package.json
nano-rspow-node/src/: lib.rs
nano-rspow-python/: Cargo.toml  build.rs  nano_rspow.pyi  pyproject.toml
nano-rspow-python/src/: lib.rs
nano-rspow-python/tests/: test_pow.py
nano-rspow-web/: .gitignore  Cargo.toml  README.md  package.json
nano-rspow-web/browser-demo/: build-demo.py  demo.js  index.html  index.template.html
nano-rspow-web/examples/: benchmark_web.rs
nano-rspow-web/src/: cpu.rs  lib.rs  webgpu.rs
nano-rspow/benches/: pow_benchmark.rs
nano-rspow/src/: cpu.rs  difficulty.rs  lib.rs  thresholds.rs  types.rs
nano-rspow/src/opencl_backend/: mod.rs  pow.cl
nano-rspow/src/wgpu_backend/: mod.rs  pow.wgsl
