[package]
name = "nano-rspow-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated Nano (XNO) Proof of Work library — Python bindings."

[lib]
name = "nano_rspow"
crate-type = ["cdylib"]

[features]
opencl = ["nano-rspow/opencl"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
nano-rspow = { path = "../nano-rspow" }
hex = "0.4"
