[package]
name = "nano-rspow-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "GPU-accelerated Nano (XNO) Proof of Work library — Python bindings."

[lib]
name = "nano_rspow"
crate-type = ["cdylib"]

[package.metadata.maturin]
features = ["pyo3/abi3-py39"]

[features]
opencl = ["nano-rspow/opencl"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
nano-rspow = { path = "../nano-rspow" }
hex = "0.4"
