[package]
name = "nano-rspow-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Web/WASM Proof of Work generation for Nano (XNO) using WebGPU and CPU fallback."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nano-rspow = { path = "../nano-rspow", default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console", "Window"] }
wgpu = { version = "29.0.3", default-features = false, features = ["webgpu", "wgsl"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"
bytemuck = { version = "1", features = ["derive"] }
hex = "0.4"

